--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(cpp_modules)
 set(CMAKE_CXX_STANDARD 98)
 
 add_executable(cpp_modules
-#	CPP 00 - EX 00
+		#	CPP 00 - EX 00
 #		cpp00/ex00/megaphone.cpp
 #	CPP 01 - EX 00
 #		cpp01/ex00/main.cpp
@@ -13,8 +13,10 @@ add_executable(cpp_modules
 #		cpp01/ex00/Zombie.cpp
 #		cpp01/ex00/Zombie.hpp
 #	CPP 01 - EX 01
-		cpp01/ex01/main.cpp
-		cpp01/ex01/Zombie.cpp
-		cpp01/ex01/Zombie.hpp
-		cpp01/ex01/zombieHorde.cpp
+#		cpp01/ex01/main.cpp
+#		cpp01/ex01/Zombie.cpp
+#		cpp01/ex01/Zombie.hpp
+#		cpp01/ex01/zombieHorde.cpp
+#	CPP 01 - EX 01
+		cpp01/ex02/main.cpp
 )
