--- a/cpp01/ex02/Makefile
+++ b/cpp01/ex02/Makefile
@@ -1,10 +1,10 @@
 
-NAME = brain
+NAME = address
 
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
-SRC = megaphone.cpp
+SRC = main.cpp
 OBJ = $(SRC:.cpp=.o)
 
 all: $(NAME)
