finish cpp01/ex03

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,8 @@ add_executable(cpp_modules
 #	CPP 00 - EX 00
 #		cpp00/ex00/megaphone.cpp
 #	CPP 00 - EX 00
-		cpp00/ex01/phonebook.cpp
-		cpp00/ex01/phonebook.hpp
+#		cpp00/ex01/phonebook.cpp
+#		cpp00/ex01/phonebook.hpp
 		#	CPP 01 - EX 00
 #		cpp01/ex00/main.cpp
 #		cpp01/ex00/Zombie.cpp
@@ -23,11 +23,11 @@ add_executable(cpp_modules
 #	CPP 01 - EX 02
 #		cpp01/ex02/main.cpp
 #	CPP 01 - EX 03
-#		cpp01/ex03/main.cpp
-#		cpp01/ex03/Weapon.cpp
-#		cpp01/ex03/Weapon.hpp
-#		cpp01/ex03/HumanA.cpp
-#		cpp01/ex03/HumanA.hpp
-#		cpp01/ex03/HumanB.cpp
-#		cpp01/ex03/HumanB.hpp
+		cpp01/ex03/main.cpp
+		cpp01/ex03/Weapon.cpp
+		cpp01/ex03/Weapon.hpp
+		cpp01/ex03/HumanA.cpp
+		cpp01/ex03/HumanA.hpp
+		cpp01/ex03/HumanB.cpp
+		cpp01/ex03/HumanB.hpp
 )
