--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,10 @@ set(CMAKE_CXX_STANDARD 98)
 add_executable(cpp_modules
 #	CPP 00 - EX 00
 #		cpp00/ex00/megaphone.cpp
-#	CPP 00 - EX 00
+#	CPP 00 - EX 01
 #		cpp00/ex01/phonebook.cpp
 #		cpp00/ex01/phonebook.hpp
-		#	CPP 01 - EX 00
+#	CPP 01 - EX 00
 #		cpp01/ex00/main.cpp
 #		cpp01/ex00/Zombie.cpp
 #		cpp01/ex00/Zombie.hpp
@@ -23,11 +23,15 @@ add_executable(cpp_modules
 #	CPP 01 - EX 02
 #		cpp01/ex02/main.cpp
 #	CPP 01 - EX 03
-		cpp01/ex03/main.cpp
-		cpp01/ex03/Weapon.cpp
-		cpp01/ex03/Weapon.hpp
-		cpp01/ex03/HumanA.cpp
-		cpp01/ex03/HumanA.hpp
-		cpp01/ex03/HumanB.cpp
-		cpp01/ex03/HumanB.hpp
+#		cpp01/ex03/main.cpp
+#		cpp01/ex03/Weapon.cpp
+#		cpp01/ex03/Weapon.hpp
+#		cpp01/ex03/HumanA.cpp
+#		cpp01/ex03/HumanA.hpp
+#		cpp01/ex03/HumanB.cpp
+#		cpp01/ex03/HumanB.hpp
+#	CPP 01 - EX 04
+		cpp01/ex04/main.cpp
+		cpp01/ex04/replace.cpp
+		cpp01/ex04/replace.hpp
 )
