--- a/cpp01/ex04/Makefile
+++ b/cpp01/ex04/Makefile
@@ -4,23 +4,14 @@ NAME = replace
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
-SRC =	main.cpp replace.cpp
-OBJ_DIR = obj
-HEADER = replace.hpp
-OBJ = $(SRC:.cpp=$(OBJ_DIR)/.o)
+SRC = main.cpp
+OBJ = $(SRC:.cpp=.o)
 
 all: $(NAME)
-
-$(OBJ_DIR):
-	@mkdir -p $(OBJ_DIR)
 
 $(NAME): $(SRC)
 	@$(CXX) $(CXXFLAGS) $(SRC) -o $(NAME)
 	@printf "compiled\n"
-
-$(OBJ_DIR)/%.o: %.c $(HEADER) Makefile | $(OBJ_DIR)
-	@mkdir -p $(dir $@)
-	@cc $(CXXFLAGS) -c $< -o $@
 
 clean:
 	@rm -f $(OBJ)
