cpp00\ex01 in process, get info for add cmd, print table for search cmd

--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -5,6 +5,7 @@ CC = c++
 FLAGS = -Wall -Wextra -Werror -std=c++98
 
 SRC =	main.cpp\
+		contact.cpp\
 		phonebook.cpp
 HEADER = phonebook.hpp
 OBJ = $(SRC:.cpp=.o)
