--- a/cpp00/ex00/Makefile
+++ b/cpp00/ex00/Makefile
@@ -10,7 +10,7 @@ OBJ = $(SRC:%.cpp=%.o)
 all: $(NAME)
 
 $(NAME): $(OBJ)
-	@$(CXX) $(CXXFLAGS) $(OBJ) -o $(NAME)
+	@$(CXX) $(CXXFLAGS) $^ -o $@
 	@printf "compiled\n"
 
 clean:
