--- a/cpp01/ex03/Makefile
+++ b/cpp01/ex03/Makefile
@@ -4,29 +4,28 @@ NAME = human
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
-SRC =	main.cpp\
-		Weapon.cpp\
-		HumanA.cpp\
-		HumanB.cpp
+SRC =		main.cpp \
+			HumanA.cpp \
+			HumanB.cpp \
+			Weapon.cpp
+HEADER =	HumanA.cpp \
+			HumanB.cpp \
+			Weapon.cpp
 OBJ_DIR = obj
-HEADER = Weapon.hpp HumanA.hpp HumanB.hpp
-OBJ = $(SRC:.cpp=$(OBJ_DIR)/.o)
+OBJ = $(SRC:%.cpp=$(OBJ_DIR)/%.o)
 
 all: $(NAME)
 
-$(OBJ_DIR):
-	@mkdir -p $(OBJ_DIR)
+$(OBJ_DIR)/%.o: %.cpp $(HEADER) Makefile
+	@mkdir -p $(dir $@)
+	@$(CXX) $(CXXFLAGS) -c $< -o $@
 
-$(NAME): $(SRC)
-	@$(CXX) $(CXXFLAGS) $(SRC) -o $(NAME)
+$(NAME): $(OBJ)
+	@$(CXX) $(CXXFLAGS) $^ -o $@
 	@printf "compiled\n"
 
-$(OBJ_DIR)/%.o: %.c $(HEADER) Makefile | $(OBJ_DIR)
-	@mkdir -p $(dir $@)
-	@cc $(CXXFLAGS) -c $< -o $@
-
 clean:
-	@rm -f $(OBJ)
+	@rm -rf $(OBJ_DIR)
 	@printf "cleaned\n"
 
 fclean: clean
