--- a/cpp02/ex00/Makefile
+++ b/cpp02/ex00/Makefile
@@ -4,27 +4,24 @@ NAME = fixed
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
-SRC =	main.cpp\
+SRC =	main.cpp \
 		Fixed.cpp
 OBJ_DIR = obj
 HEADER = Fixed.hpp
-OBJ = $(SRC:.cpp=$(OBJ_DIR)/.o)
+OBJ = $(SRC:%.cpp=$(OBJ_DIR)/%.o)
 
 all: $(NAME)
 
-$(OBJ_DIR):
-	@mkdir -p $(OBJ_DIR)
+$(OBJ_DIR)/%.o: %.cpp $(HEADER) Makefile
+	@mkdir -p $(dir $@)
+	@$(CXX) $(CXXFLAGS) -c $< -o $@
 
-$(NAME): $(SRC)
-	@$(CXX) $(CXXFLAGS) $(SRC) -o $(NAME)
+$(NAME): $(OBJ)
+	@$(CXX) $(CXXFLAGS) $^ -o $@
 	@printf "compiled\n"
 
-$(OBJ_DIR)/%.o: %.c $(HEADER) Makefile | $(OBJ_DIR)
-	@mkdir -p $(dir $@)
-	@cc $(CXXFLAGS) -c $< -o $@
-
 clean:
-	@rm -f $(OBJ_DIR)
+	@rm -rf $(OBJ_DIR)
 	@printf "cleaned\n"
 
 fclean: clean
