--- a/cpp04/ex00/Makefile
+++ b/cpp04/ex00/Makefile
@@ -2,7 +2,7 @@
 NAME = animal
 
 CXX = c++
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -Wpedantic
 
 SRC =		main.cpp \
 			Animal.cpp \
