cpp04/ex03 in process

--- a/cpp04/ex03/Makefile
+++ b/cpp04/ex03/Makefile
@@ -2,7 +2,11 @@
 NAME = interface
 
 CXX = c++
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -Wpedantic -MMD -MP -O2 -g
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -Wpedantic -MMD -MP -O2
+ifdef FSANITIZE
+	CXXFLAGS+= -g3 -fsanitize=address -DDEBUG=1
+	LDFLAGS+= -g3 -fsanitize=address
+endif
 INCLUDE_DIR=.
 
 SRC =		main.cpp \
